SERVER-61096 ResetDbPath sometimes errors while recreating dbpath on Windows

(cherry picked from commit e8aafb99f494c29e6ed05e3696a9cd2bb6b3ea5b)